Fix fault letting long results overflow display

--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ body {
     align-items: center;
     padding: 10px;
     font-family: 'Black Ops One', Roboto;
-    font-size: 40px;
+    font-size: 28px;
 }
 
 .input {
